tests/baselines/reference/decoratorOnClassMethod3(strict=true).errors.txt
decoratorOnClassMethod3.ts(4,5): error TS7008: Member 'public' implicitly has an 'any' type.
decoratorOnClassMethod3.ts(4,12): error TS1436: Decorators must precede the name and all keywords of property declarations.


==== decoratorOnClassMethod3.ts (2 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        public @dec method() {}
        ~~~~~~
!!! error TS7008: Member 'public' implicitly has an 'any' type.
               ~
!!! error TS1436: Decorators must precede the name and all keywords of property declarations.
    }